--- a/Board.fxml
+++ b/Board.fxml
@@ -1,14 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.GridPane?>
-<?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.shape.Circle?>
-<?import javafx.scene.shape.Line?>
-<?import javafx.scene.shape.Rectangle?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.shape.*?>
 
-<GridPane fx:id="grid" alignment="CENTER" gridLinesVisible="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/16" fx:controller="controller.Controller">
+<GridPane fx:id="grid" alignment="CENTER" gridLinesVisible="true" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.Controller">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
     <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -37,6 +33,5 @@
       <Line endX="-100.62132263183594" startX="-100.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
       <Button mnemonicParsing="false" onAction="#moveOneSquare" prefHeight="25.0" prefWidth="161.0" text="Move 1" GridPane.columnIndex="1" GridPane.columnSpan="2" GridPane.rowIndex="6" />
       <Button mnemonicParsing="false" onAction="#move3Squares" prefHeight="25.0" prefWidth="150.0" text="Move 3" GridPane.columnIndex="5" GridPane.columnSpan="2" GridPane.rowIndex="6" />
-      <Circle fill="#ff1f1f" radius="17.0" stroke="BLACK" strokeType="INSIDE" GridPane.rowIndex="1"  fx:id="user" />
    </children>
 </GridPane>
